# croshet

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  flake.nix  mise.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: lib.rs  parser.rs
src/shell/: child_process_tracker.rs  command.rs  execute.rs  mod.rs  types.rs  which.rs
src/shell/commands/: args.rs  cat.rs  cd.rs  cp_mv.rs  echo.rs  executable.rs  exit.rs  export.rs  head.rs  mkdir.rs  mod.rs  pwd.rs  rm.rs  sleep.rs  unset.rs  which.rs  xargs.rs
tests/: integration_test.rs  test_builder.rs
