[package]
name = "deno_task_shell"
version = "0.26.1"
authors = ["Erica Marigold <hi@devcomp.xyz>", "the Deno authors"]
documentation = "https://docs.rs/deno_task_shell"
edition = "2024"
homepage = "https://deno.land/"
license = "MIT AND MPL-2.0"
repository = "https://github.com/denoland/deno_task_shell"
description = "Cross platform scripting for deno task"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(tokio_unstable)'] }

[features]
default = ["shell"]
shell = [
    "dep:dunce",
    "dep:futures",
    "dep:glob",
    "dep:nix",
    "dep:path-dedot",
    "dep:soft-canonicalize",
    "dep:tokio",
    "dep:windows-sys",
    "dep:sys_traits",
    "dep:which",
]
serialization = ["dep:serde"]

[dependencies]
anyhow = "1.0.75"
futures = { version = "0.3.29", optional = true }
glob = { version = "0.3.1", optional = true }
path-dedot = { version = "3.1.1", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
monch = "0.5.0"
thiserror = "2.0.9"
tokio = { version = "1", features = [
    "fs",
    "io-std",
    "io-util",
    "macros",
    "process",
    "rt-multi-thread",
    "sync",
    "time",
], optional = true }
sys_traits = { version = "0.1.14", optional = true, features = [
    "real",
    "winapi",
    "libc",
] }
which = { version = "8.0.0", default-features = false, optional = true }
dunce = { version = "1.0.5", optional = true }
soft-canonicalize = { version = "0.3.6", optional = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29.0", features = ["fs", "signal"], optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = [
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
], optional = true }

[dev-dependencies]
parking_lot = "0.12.1"
pretty_assertions = "1"
serde_json = "1.0.111"
tempfile = "3.8.1"

[target.'cfg(tokio_unstable)'.dev-dependencies]
tokio-macros = { git = "https://github.com/tokio-rs/tokio", rev = "4b96af6" }
